# tender-watch

./: .gitignore  README.md  config.yaml  probe.py  pyproject.toml  requirements.txt  run.py
.github/workflows/: tenderwatch.yml
data/: tenders.db-shm
docs/: COVERAGE_AND_CLIENTS.md
launchd/: com.amit.tenderwatch.plist
tenderwatch/: __init__.py  config.py  dashboard.py  db.py  filters.py  notify.py  parsing.py  runner.py  scrape.py
tests/: conftest.py  test_dashboard.py  test_db.py  test_filters.py  test_notify.py  test_parsing.py  test_scrape.py
