[project]
name = "tenderwatch"
version = "0.1.0"
description = "Scrapes Indian government e-procurement portals into SQLite with a dashboard and phone alerts"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "pyyaml>=6.0",
]

[tool.ruff]
line-length = 95
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
# Test fixtures embed real portal HTML; long lines are intentional.
"tests/*" = ["E501"]
# dashboard.py embeds a CSS/JS HTML template; its long lines are not Python.
"tenderwatch/dashboard.py" = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
